@@ -1,5 +1,10 @@
 2006-07-17  Roger Leigh  <rleigh@debian.org>
 
+	* dchroot/dchroot.1.in, dchroot-dsa/dchroot-dsa.1.in: Remove
+	accidentally committed SVN conflict markers.
+
+2006-07-17  Roger Leigh  <rleigh@debian.org>
+
 	* sbuild/sbuild-auth-conv-tty.cc
 	(get_delay): Fix incorrectly named function call.
 
